--- a/MrCMS/packages.config
+++ b/MrCMS/packages.config
@@ -40,6 +40,7 @@
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
   <package id="ninject.extensions.conventions" version="3.2.0.0" targetFramework="net45" />
   <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net45" />
+  <package id="Npgsql" version="3.1.8" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Owin.Security.Providers" version="2.8.0" targetFramework="net452" />
   <package id="Owin.Security.Providers.ArcGISOnline" version="2.8.0" targetFramework="net452" />
