--- a/MrCMS/packages.config
+++ b/MrCMS/packages.config
@@ -3,7 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
   <package id="elmah" version="1.2.2" targetFramework="net40" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net40" />
-  <package id="EPPlus" version="4.0.5" targetFramework="net452" />
+  <package id="EPPlus" version="4.1.0" targetFramework="net452" />
   <package id="FluentNHibernate" version="2.0.3.0" targetFramework="net452" />
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net45" />
   <package id="ImageResizer" version="4.0.5" targetFramework="net452" />
@@ -42,55 +42,57 @@
   <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net45" />
   <package id="Npgsql" version="3.1.8" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net45" />
-  <package id="Owin.Security.Providers" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.ArcGISOnline" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Asana" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Backlog" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.BattleNet" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Bitbucket" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Buffer" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Cosign" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.DeviantArt" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Discord" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.DoYouBuzz" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Dropbox" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.EVEOnline" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Fitbit" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Flickr" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Foursquare" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Geni" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.GitHub" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Gitter" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.GooglePlus" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.HealthGraph" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Imgur" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Instagram" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.LinkedIn" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.MyHeritage" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Onshape" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.OpenID" version="2.8.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.ArcGISOnline" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Asana" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Backlog" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Baidu" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.BattleNet" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Bitbucket" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Box" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Buffer" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Cosign" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.DeviantArt" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Discord" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.DoYouBuzz" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Dropbox" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.EVEOnline" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Fitbit" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Flickr" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Foursquare" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Geni" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.GitHub" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Gitter" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.GooglePlus" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.HealthGraph" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Imgur" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Instagram" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.LinkedIn" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.MyHeritage" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Onshape" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.OpenID" version="2.9.0" targetFramework="net452" />
   <package id="Owin.Security.Providers.OpenIDBase" version="2.1" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Orcid" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.PayPal" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Reddit" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Salesforce" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Shopify" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.SlackProvider" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.SoundCloud" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Spotify" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.StackExchange" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Steam" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.TripIt" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Twitch" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Untappd" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Vimeo" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.VisualStudio" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.VKontakte" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Wargaming" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.WordPress" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Xing" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Yahoo" version="2.8.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Yammer" version="2.8.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Orcid" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.PayPal" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Reddit" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Salesforce" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Shopify" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.SlackProvider" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.SoundCloud" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Spotify" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.StackExchange" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Steam" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.TripIt" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Twitch" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Untappd" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Vimeo" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.VisualStudio" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.VKontakte" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Wargaming" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.WordPress" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Xing" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Yahoo" version="2.9.0" targetFramework="net452" />
+  <package id="Owin.Security.Providers.Yammer" version="2.9.0" targetFramework="net452" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
   <package id="StackExchange.Redis" version="1.1.608" targetFramework="net452" />
   <package id="System.Data.SQLite.Core" version="1.0.103" targetFramework="net452" />
