--- a/MrCMS.Web/packages.config
+++ b/MrCMS.Web/packages.config
@@ -8,6 +8,7 @@
   <package id="Foolproof" version="0.9.4518" targetFramework="net452" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net452" />
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net45" />
+  <package id="log4net" version="2.0.5" targetFramework="net452" />
   <package id="Lucene.Net" version="3.0.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net452" />
