--- a/MrCMS.Web/web.config
+++ b/MrCMS.Web/web.config
@@ -12,6 +12,7 @@
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
     </sectionGroup>
     <section name="mrcmsSettings" type="MrCMS.Settings.MrCMSSettingsSection, MrCMS, Version=0.5.1.0, Culture=neutral" requirePermission="false" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net"/>
   </configSections>
   <appSettings>
     <add key="HashingMethod" value="SHA512" />
@@ -191,6 +192,49 @@
     <errorLog type="MrCMS.Logging.MrCMSErrorLog, MrCMS" />
     <security allowRemoteAccess="false" />
   </elmah>
+
+  <log4net debug="false">
+
+    <!-- Define some output appenders -->
+    <appender name="trace"
+          type="log4net.Appender.TraceAppender, log4net">
+      <layout type="log4net.Layout.PatternLayout,log4net">
+        <param name="ConversionPattern"
+             value="%d{ABSOLUTE} %-5p %c{1}:%L - %m%n" />
+      </layout>
+    </appender>
+
+    <appender name="console"
+          type="log4net.Appender.ConsoleAppender, log4net">
+      <layout type="log4net.Layout.PatternLayout,log4net">
+        <param name="ConversionPattern"
+             value="%d{ABSOLUTE} %-5p %c{1}:%L - %m%n" />
+      </layout>
+    </appender>
+
+    <appender name="rollingFile"
+          type="log4net.Appender.RollingFileAppender,log4net" >
+
+      <param name="File" value="log.txt" />
+      <param name="AppendToFile" value="false" />
+      <param name="RollingStyle" value="Date" />
+      <param name="DatePattern" value="yyyy.MM.dd" />
+      <param name="StaticLogFileName" value="true" />
+
+      <layout type="log4net.Layout.PatternLayout,log4net">
+        <param name="ConversionPattern"
+          value="%d [%t] %-5p %c - %m%n" />
+      </layout>
+    </appender>
+
+    <!-- Setup the root category, add the appenders and set the default priority -->
+    <root>
+      <priority value="DEBUG" />
+      <appender-ref ref="rollingFile" />
+    </root>
+
+  </log4net>
+
   <!-- file upload limits configuaration - set to 60MB by default-->
   <location path="Admin/File/Files">
     <system.web>
@@ -236,9 +280,7 @@
       <remove invariant="MySql.Data.MySqlClient" />
       <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
       <remove invariant="Npgsql" />
-      <add name="Npgsql Data Provider" invariant="Npgsql"
-         description="Data Provider for PostgreSQL"
-         type="Npgsql.NpgsqlFactory, Npgsql" />
+      <add name="Npgsql Data Provider" invariant="Npgsql" description="Data Provider for PostgreSQL" type="Npgsql.NpgsqlFactory, Npgsql" />
     </DbProviderFactories>
   </system.data>
 </configuration>
